--- a/site/assets/less/flexi_shared.less
+++ b/site/assets/less/flexi_shared.less
@@ -1927,7 +1927,7 @@ table.fc_uploader_header_tbl {
 	display: block;
 	z-index: 1001;
 	position: fixed;
-	top:50%;
+	top: 35%;
 	left: 50%;
 	color: black;
 	background: white 30px 40px no-repeat;
@@ -1941,7 +1941,7 @@ table.fc_uploader_header_tbl {
 	border: 1px solid lightgray;
 	border-radius: 8px;
 	text-align: left;
-	width :300px;
+	width: 300px;
 	transform: translate(-50%, 0);
 }
 #fc_filter_form_blocker .fc_blocker_bar {
